# Backend/microservices/api.auth/internal/service/auth_service.go
@@ -198,6 +198,12 @@ func (s *AuthService) ResolveActiveCompany(userDetail *domain.ApiUserDetail) err
 				break
 			}
 		}
+
+		visualConfig, err := utils.ResolveActiveCompanyVisualConfig(s.db, *activeID)
+		if err != nil {
+			return err
+		}
+		userDetail.ActiveCompanyVisualConfig = visualConfig
 	}
 
 	return nil
